# esp32-door

./: .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  door_opener.c  main.bak  main.c  motor.c  server.c
main/include/: motor.h  server.h
src/: sdkconfig
